# practical-tools-for-simple-design

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  Animation_8hpp_source.html  App_8hpp_source.html  AssetStore_8hpp_source.html  BGM_8hpp_source.html  Base64_8hpp_source.html  CMakeLists.txt  CONTRIBUTING.md  Cat_8hpp_source.html  Color_8hpp_source.html  Context_8hpp_source.html  Core_2Docs_8hpp_source.html  DebugMessageCallback_8hpp_source.html  Drawable_8hpp_source.html  GameObject_8hpp_source.html  GiraffeText_8hpp_source.html  Giraffe_8hpp_source.html  Image_8hpp_source.html  IndexBuffer_8hpp_source.html  Input_8hpp_source.html  Keycode_8hpp_source.html  LICENSE  LoadTextFile_8hpp_source.html  Logger_8hpp_source.html  MissingFontTextureBase64_8hpp_source.html  MissingImageTextureBase64_8hpp_source.html  MissingTextureBase64_8hpp_source.html  MissingTexture_8hpp_source.html  Position_8hpp_source.html  Program_8hpp_source.html  README.md  Renderer_8hpp_source.html  Root_8hpp_source.html  SFX_8hpp_source.html  Shader_8hpp_source.html  Text_8hpp_source.html  TextureUtils_8hpp_source.html  (+130 more)
.github  /: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/docs/: Code-Styles-and-Guidelines.md
.github/docs/CLionQuickStart/: CLionQuickStart.md
.github/workflows/: build.yml  check.yml  docs.yml  post.yml
assets/shaders/: Base.frag  Base.vert  Triangle.frag  Triangle.vert
cmake/: Dependencies.cmake
docs/: Doxyfile  custom.css  header.html
docs/markdowns/: mainpage.md
example/include/: App.hpp  Cat.hpp  GiraffeText.hpp
example/src/: App.cpp  Cat.cpp  Giraffe.cpp  GiraffeText.cpp  main.cpp
include/: App.hpp  Cat.hpp  Giraffe.hpp  GiraffeText.hpp  SpriteSheetTester.hpp  Triangle.hpp  config.h  config.hpp  pch.hpp
include/Core/: Context.hpp  DebugMessageCallback.hpp  Docs.hpp  Drawable.hpp  IndexBuffer.hpp  MissingFontTextureBase64.hpp  MissingImageTextureBase64.hpp  MissingTextureBase64.hpp  Program.hpp  Shader.hpp  Texture.hpp  TextureUtils.hpp  Transform.hpp  TransparentImageBase64.hpp  UniformBuffer.hpp  UniformBuffer.inl  VertexArray.hpp  VertexBuffer.hpp
include/Util/: Animation.hpp  AssetStore.hpp  AssetStore.inl  Audio.hpp  BGM.hpp  Base64.hpp  Color.hpp  Docs.hpp  Event.hpp  GameObject.hpp  Image.hpp  Input.hpp  Keycode.hpp  LoadTextFile.hpp  Logger.hpp  MissingFontTexture.hpp  MissingImageTexture.hpp  MissingTexture.hpp  PTSDScancode.hpp  Position.hpp  Position.inl  RenderQueue.hpp  Renderer.hpp  Root.hpp  SFX.hpp  SpriteSheet.hpp  Text.hpp  Time.hpp  Transform.hpp  TransformUtils.hpp  TransparentImage.hpp
include/Util/Event/: KeyboardEvent.hpp
scripts/test/: audioTest.bat  audioTest.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_2.js  enumvalues_3.js  (+34 more)
src/: App.cpp  Cat.cpp  Giraffe.cpp  GiraffeText.cpp  SpriteSheetTester.cpp  Triangle.cpp  config.cpp  main.cpp
src/Core/: Context.cpp  DebugMessageCallback.cpp  Drawable.cpp  IndexBuffer.cpp  Program.cpp  Shader.cpp  Texture.cpp  TextureUtils.cpp  Transform.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Util/: Animation.cpp  Audio.cpp  BGM.cpp  Base64.cpp  Color.cpp  Event.cpp  GameObject.cpp  Image.cpp  Input.cpp  LoadTextFile.cpp  Logger.cpp  MissingFontTexture.cpp  MissingImageTexture.cpp  MissingTexture.cpp  Position.cpp  RenderQueue.cpp  Renderer.cpp  Root.cpp  SFX.cpp  SpriteSheet.cpp  Text.cpp  Time.cpp  Transform.cpp  TransformUtils.cpp
src/Util/Event/: KeyboardEvent.cpp
test/: Audio.cpp  NotSimpleTest.cpp  PositionTest.cpp  SimpleTest.cpp  TransformTest.cpp  audio.cpp
test/Interactive/: Audio.cpp
